# meta-morph-pix

./: Dockerfile  docker-compose.yml  pyproject.toml
meta_morph_pix/: __main__.py  router.py
meta_morph_pix/config/: backblaze.py
meta_morph_pix/services/: storage_service.py  transformation_service.py
meta_morph_pix/utils/: blackblaze_client.py
